--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,14 @@ body {
     max-width: 750px;
     margin: auto;
     font-family: 'Courier New', Courier, monospace;
+    margin-top: 40px;
+    margin-bottom: 100px;
 }
 
 
 img{
     border-radius: 50px;
+    width: 35%;
     box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
 }
 
@@ -55,4 +58,25 @@ a:hover{
 .contact h2{
     text-align: center;
     justify-content: space-between;
+}
+
+.contact label{
+    display: block;
+
+}
+
+.contact input,
+.contact textarea{
+    width: 100%;
+    border: 0px;
+    background-color: rgb(255, 255, 255);
+    color: red;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    outline: none;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.contact textarea{
+    max-width: 100%;
 }
